--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,29 +2,27 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-tsrouter-app" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
-  <link rel="manifest" href="/manifest.json" />
-  <title>Create TanStack App - frontend</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="description" content="A app for all recipes"/>
+    <link rel="manifest" href="/manifest.json"/>
+    <title>Recipe App</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.tsx"></script>
-  <script>
+<div id="app"></div>
+<script type="module" src="./src/main.tsx"></script>
+<script>
     if (
-      localStorage.theme === "dark" ||
-      (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)
+        localStorage.theme === "dark" ||
+        (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)
     ) {
-      document.documentElement.classList.add("dark");
+        document.documentElement.classList.add("dark");
     } else {
-      document.documentElement.classList.remove("dark");
+        document.documentElement.classList.remove("dark");
     }
-  </script>
+</script>
 </body>
 
 </html>
